[package]
name = "ledger-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cursive = "0.20.0"
cli-clipboard = "0.4.0"
near-crypto = "0.16.1"
near-ledger = "0.2.0"
slip10 = "0.4.3"
tokio = { version = "1", features = ["full"] }